# claude-auto-review

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  Claude Auto Review-Plugin-PRD.md  HOOKS.md  INSTALL.md  LICENSE  README.md  REFACTOR_ROADMAP.md  install.py  package-lock.json  package.json  plan.md  pyproject.toml  test_out.txt  test_output.txt  uninstall.py
.claude-plugin/: plugin.json
.claude/claude-auto-review/: rules.md
.githooks/: pre-commit
.github/workflows/: lint.yml  quality.yml  test.yml
agents/: reviewer.md
claude_auto_review/: __init__.py  bootstrap.py  cancel_claude_auto_review.py  cli.py  client_dirs.py  constants.py  installer.py  path_utils.py  paths.py  review_completion.py  review_generation.py  review_prompt.py  review_prompt_flow.py  reviews.py  runtime.py  runtime_cleanup.py  runtime_helpers.py  runtime_setup.py  settings.py  setup_claude_auto_review.py  shims.py  state.py  state_store.py  state_store_read.py  state_store_write.py  stop_autocomplete.py  stop_flow.py  stop_flow_logic.py  stop_selection.py  timestamps.py  uri_utils.py
claude_auto_review/agents/: reviewer.md
claude_auto_review/config/: cleanup.py  constants.py  file_filters.py  hooks_merge.py  io.py  models.py  project_settings.py  reviewer.py  rules.py  serialization.py  settings.py
claude_auto_review/hooks/: common.py  entrypoint.py  hooks.json  post_tool_use.py  session_end.py  stop_hook.py
claude_auto_review/install/: cancel_cli.py  config_cli.py  config_cli_apply.py  config_cli_display.py  config_cli_io.py  config_cli_prompts.py  file_utils.py  installer.py  reviewer_format.py  setup_cli.py  shims.py  uninstall_cli.py  update_cli.py
claude_auto_review/paths/: file_utils.py  path_utils.py  shell_parsing.py  shims.py  uri_utils.py
claude_auto_review/review/: completion.py  generation.py  lifecycle.py  partial_review.py  prompt.py  prompt_flow.py  prompt_templates.py  rendering.py
claude_auto_review/rules/: review-rules.md
claude_auto_review/runtime/: cleanup.py  cleanup_paths.py  cleanup_session.py  cleanup_stale.py  client_dirs.py  context.py  events.py  helpers.py  hook_context.py  hook_identity.py  payload.py  pending_cleanup.py  process.py  serialization.py  setup.py
claude_auto_review/state/: classification_record.py  edit_record.py  event_types.py  file_record.py  hashing.py  hook_input.py  models.py  parsing.py  record_utils.py  review_expiry.py  review_matching.py  review_records.py  reviews.py  serialization.py  shell_handlers.py  shell_path_extract.py  shell_registry.py  shell_targets.py  snapshot.py  snapshot_helpers.py  stop_blocks.py  store_read.py  store_write.py  tracker.py
claude_auto_review/stop/: autocomplete.py  client.py  feedback.py  feedback_format.py  finalize_review_stop.py  flow.py  models.py  (+5 more)
commands/: cancel-claude-auto-review.md  claude-auto-review.md
docs/: CLAUDE_CODE_HOOKS.md  CODEX_CLI.md  INSTALL.md  OPENCODE_CLI.md  README.md  RULES-GUIDE.md
hooks/: bootstrap.py  hooks.json  post-tool-use.js  post_tool_use.py  session_end.py  session_stop.py  stop-hook.js  stop_hook.py
rules/: default-rules.md  review-rules.md
scripts/: cancel_claude_auto_review.py  check-mermaid-diagrams.sh  installer.py  paths.py  review-prompt.js  review_prompt.py  review_prompt_flow.py  runtime.py  runtime_cleanup.py  runtime_setup.py  settings.py  setup-claude-auto-review.js  setup_claude_auto_review.py  shims.py  state.js  state.py  state_store.py  state_store_read.py  state_store_write.py  stop_autocomplete.py  stop_flow.py  stop_flow_logic.py  stop_selection.py
tests/: __init__.py  hooks.test.js  rules.test.js  state.test.js  support.py  support_classifier_server.py  support_mixins.py  support_paths.py  test_concurrency.py  test_e2e.py  test_hooks.py  test_integration.py  test_review_generation.py  test_rules.py  test_state.py
(+439 files in other folders)
