[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-auto-review"
version = "1.1.6"
description = "Claude Code plugin for automatic review after Claude edits files"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
claude-auto-review = "claude_auto_review.cli:main"

[tool.setuptools.packages.find]
include = ["claude_auto_review*"]

[tool.setuptools.package-data]
claude_auto_review = [
    "hooks/*.py",
    "hooks/*.json",
    "rules/*.md",
    "agents/*.md",
]
