[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-auto-review"
version = "1.2.2"
description = "Claude Code plugin for automatic review after Claude edits files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Tany Nguyen"}
]
keywords = ["claude-code", "ai", "review", "hooks", "automation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/tudragon154203/claude-auto-review"
Repository = "https://github.com/tudragon154203/claude-auto-review"
Documentation = "https://github.com/tudragon154203/claude-auto-review#readme"

[project.scripts]
claude-auto-review = "claude_auto_review.cli:main"

[tool.setuptools.packages.find]
include = ["claude_auto_review*"]

[tool.setuptools.package-data]
claude_auto_review = [
    "hooks/*.json",
    "rules/*.md",
    "agents/*.md",
]
