[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-auto-review"
version = "1.11.8"
description = "Claude Code plugin for automatic review after Claude edits files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Tany Nguyen"}
]
keywords = ["claude-code", "ai", "review", "hooks", "automation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/tudragon154203/claude-auto-review"
Repository = "https://github.com/tudragon154203/claude-auto-review"
Documentation = "https://github.com/tudragon154203/claude-auto-review#readme"

[project.scripts]
claude-auto-review = "claude_auto_review.cli:main"
car = "claude_auto_review.cli:main"

[tool.setuptools.packages.find]
include = ["claude_auto_review*"]

[tool.setuptools.package-data]
claude_auto_review = [
    "hooks/*.json",
    "rules/*.md",
    "agents/*.md",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.0",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/", "hooks/"]

[tool.coverage.run]
source = ["claude_auto_review"]
branch = true
omit = ["tests/*", "hooks/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
]

